Draft Russian translation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>D&D 5e quick reference</title>
+    <title>D&D 5e - Справочник</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/quickref.css">
     <link rel="stylesheet" type="text/css" href="css/icons.css">
@@ -19,11 +19,11 @@
         <!-- Movement section -->
         <div id="section-movement" class="section-container">
             <div class="section-title">
-                Movement <span class="float-right">limited by movement speed</span>
+                Движение <span class="float-right">ограничено скоростью</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can move at any time during your turn (before, after, or during actions).
+                    Вы можете передвигаться в любое время вашего хода (до, после или во время действий).
                 </div>
                 <div class="section-row" id="basic-movement">
                 </div>
@@ -33,7 +33,7 @@
         <!-- Action section -->
         <div id="section-action" class="section-container">
             <div class="section-title">
-                Action <span class="float-right">1/turn</span>
+                Действие <span class="float-right">1/ход</span>
             </div>
             <div class="section-content">
                 <div class="section-row" id="basic-actions"></div>
@@ -43,11 +43,11 @@
         <!-- Free Action section -->
         <div id="section-free-action" class="section-container">
              <div class="section-title">
-                 Free Action (At DM discretion)
+                 Свободное действие (с разрешения Мастера)
              </div>
              <div class="section-content">
                   <div class="section-row section-subtitle text fontsize">
-                      Free actions can be done on your turn at no cost.
+                      Свободное действие может быть совершено в ваш ход без затраты основного.
                   </div>
                  <div class="section-row" id="basic-free-actions"></div>
             </div>
@@ -56,12 +56,12 @@
         <!-- Bonus Action section -->
         <div id="section-bonus-action" class="section-container">
             <div class="section-title">
-                Bonus Action <span class="float-right">max. 1/turn</span>
+                Бонусное действие <span class="float-right">макс. 1/ход</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can take a bonus action only when a special ability, spell, or feature
-                    states that you can do something as a bonus action.
+                    Разнообразные классовые умения, заклинания и прочие эффекты позволяют
+                    вам совершать в ход дополнительное бонусное действие.
                 </div>
                 <div class="section-row" id="basic-bonus-actions"></div>
             </div>
@@ -70,12 +70,12 @@
         <!-- Reaction section -->
         <div id="section-reaction" class="section-container">
             <div class="section-title">
-                Reaction <span class="float-right">max. 1/round</span>
+                Реакция <span class="float-right">макс. 1/ход</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    A reaction is an instant response to a trigger of some kind, which
-                    can occur on your turn or on someone else's.
+                    Реакция — это мгновенный ответ на срабатывание некоего условия, который может
+                    происходить как в ваш, так и в чужой ход.
                 </div>
                 <div class="section-row" id="basic-reactions"></div>
             </div>
@@ -84,11 +84,13 @@
         <!-- Condition section -->
         <div id="section-condition" class="section-container">
             <div class="section-title">
-                Condition
+                Состояние
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    Conditions alter your capabilities in a variety of ways, and can arise as a result of a spell, a class feature, a monster's attack, or other effect.
+                    Состояния различными способами изменяют возможности существа и
+                    могут являться следствием заклинания, классового умения, атаки
+                    чудовища или другого эффекта.
                 </div>
                 <div class="section-row" id="basic-conditions"></div>
             </div>
@@ -97,23 +99,25 @@
         <!-- Environmental section -->
         <div id="section-environment" class="section-container">
             <div class="section-title">
-                Environmental Effects
+                Окружающая среда
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    Effects that obscure vision can prove a significant hindrance to most adventuring tasks.
+                    Эффекты, которые сильно затрудняют видимость, передвижение и другие действия.
                 </div>
                 <div class="section-row" id="environment-obscurance"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    The presence or absence of light in an environment creates three categories of illumination.
+                    Присутствие или отсутствие света в окружении может быть разделено
+                    на три категории освещения.
                 </div>
                 <div class="section-row" id="environment-light"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    Some creatures have extraordinary senses that allow them to perceive their environment.
+                    Некоторые существа обладают экстраординарными чувствами,
+                    что позволяет им выживать в сложных условиях.
                 </div>
                 <div class="section-row" id="environment-vision"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    Obstacles can provide cover during combat, making a target more difficult to harm.
+                    Препятствия могут создавать укрытие, давая преимущество в защите.
                 </div>
                 <div class="section-row" id="environment-cover"></div>
             </div>
@@ -122,12 +126,12 @@
         <!-- Travel Section -->
         <div id="section-travel" class="section-container">
              <div class="section-title">
-                 Traveling
+                 Путешествие
              </div>
 
              <div class="section-content">
                   <div class="section-row section-subtitle text fontsize">
-                      Movement over long distance and duration
+                      Передвижение в течение долгого времени на дальние дистанции
                   </div>
                  <div class="section-row" id="travel"></div>
             </div>
@@ -136,7 +140,7 @@
         <!-- Damage Types Section -->
         <div id="section-damage-types" class="section-container">
              <div class="section-title">
-                 Damage Types
+                 Типы урона
              </div>
              <div class="section-content">
                  <div class="section-row" id="damage-types"></div>
@@ -146,7 +150,7 @@
         <!-- Health, Dying, and Resting Section -->
         <div id="section-damage-healing" class="section-container">
              <div class="section-title">
-                 Health, Dying, and Resting
+                 Хиты, Смерть и Отдых
              </div>
              <div class="section-content">
                  <div class="section-row" id="damage-health"></div>
@@ -158,49 +162,49 @@
         <!-- Ability Scores/Skills Section -->
         <div id="section-abilities" class="section-container">
             <div class="section-title">
-                Ability Scores & Skills
+                Характеристики и Навыки
             </div>
             <div class="section-content">
                 <div class="section-title-reverse-crimson">
-                    Strength
+                    Сила
                 </div>
                 <div class="section-row section-subtitle text fontsize">
-                    Strength measures bodily power, athletic training, and the extent to which you can exert raw physical force.
+                    Природный атлетизм, физическая сила.
                 </div>
                 <div class="section-row" id="abilities-str"></div>
                 <div class="section-title-reverse-crimson">
-                    Dexterity
+                    Ловкость
                 </div>
                 <div class="section-row section-subtitle text fontsize">
-                    Dexterity measures agility, reflexes, and balance.
+                    Проворство, реакция, равновесие.
                 </div>
                 <div class="section-row" id="abilities-dex"></div>
                 <div class="section-title-reverse-crimson">
-                    Constitution
+                    Телосложение
                 </div>
                 <div class="section-row section-subtitle text fontsize">
-                    Constitution measures health, stamina, and vital force.
+                    Здоровье, выносливость, жизненная сила.
                 </div>
                 <div class="section-row" id="abilities-con"></div>
                 <div class="section-title-reverse-crimson">
-                    Intelligence
+                    Интеллект
                 </div>
                 <div class="section-row section-subtitle text fontsize">
-                    Intelligence measures mental acuity, accuracy of recall, and the ability to reason.
+                    Ясность ума, память, аналитические способности.
                 </div>
                 <div class="section-row" id="abilities-int"></div>
                 <div class="section-title-reverse-crimson">
-                    Wisdom
+                    Мудрость
                 </div>
                 <div class="section-row section-subtitle text fontsize">
-                    Wisdom reflects how attuned you are to the world around you and represents perceptiveness and intuition.
+                    Осведомлённость, интуиция, проницательность.
                 </div>
                 <div class="section-row" id="abilities-wis"></div>
                 <div class="section-title-reverse-crimson">
-                    Charisma
+                    Харизма
                 </div>
                 <div class="section-row section-subtitle text fontsize">
-                    Charisma measures your ability to interact effectively with others. It includes such factors as confidence and eloquence, and it can represent a charming or commanding personality.
+                    Уверенность, красноречие, лидерство.
                 </div>
                 <div class="section-row" id="abilities-cha"></div>
             </div>
@@ -209,15 +213,15 @@
         <!-- Languages section -->
         <div id="section-languages" class="section-container">
              <div class="section-title">
-                 Languages
+                 Языки
              </div>
              <div class="section-content">
                   <div class="section-title-reverse-purple">
-                     Standard Languages
+                     Распространённые языки
                  </div>
                  <div class="section-row" id="languages-standard"></div>
                  <div class="section-title-reverse-purple">
-                    Exotic Languages
+                    Экзотические языки
                </div>
                <div class="section-row" id="languages-exotic"></div>
             </div>
@@ -226,51 +230,51 @@
         <!-- Class Abilities section -->
         <div id="section-classabilities" class="section-container">
              <div class="section-title">
-                 Class Abilities
+                 Способности классов
              </div>
              <div class="section-content">
                   <div class="section-title-reverse-maroon">
-                    Barbarian
+                    Варвар
                   </div>
                   <div class="section-row" id="class-abilities-barbarian"></div>
                   <div class="section-title-reverse-maroon">
-                    Bard
+                    Бард
                   </div>
                   <div class="section-row" id="class-abilities-bard"></div>
                   <div class="section-title-reverse-maroon">
-                    Cleric
+                    Жрец
                   </div>
                   <div class="section-row" id="class-abilities-cleric"></div>
                   <div class="section-title-reverse-maroon">
-                    Druid
+                    Друид
                   </div>
                   <div class="section-row" id="class-abilities-druid"></div>
                   <div class="section-title-reverse-maroon">
-                    Fighter
+                    Воин
                   </div>
                   <div class="section-row" id="class-abilities-fighter"></div>
                   <div class="section-title-reverse-maroon">
-                    Monk
+                    Монах
                   </div>
                   <div class="section-row" id="class-abilities-monk"></div>
                   <div class="section-title-reverse-maroon">
-                    Paladin
+                    Паладин
                   </div>
                   <div class="section-row" id="class-abilities-paladin"></div>
                   <div class="section-title-reverse-maroon">
-                    Ranger
+                    Следопыт
                   </div>
                   <div class="section-row" id="class-abilities-ranger"></div>
                   <div class="section-title-reverse-maroon">
-                    Rogue
+                    Плут
                   </div>
                   <div class="section-row" id="class-abilities-rogue"></div>
                   <div class="section-title-reverse-maroon">
-                    Sorcerer
+                    Чародей
                   </div>
                   <div class="section-row" id="class-abilities-sorcerer"></div>
                   <div class="section-title-reverse-maroon">
-                    Warlock
+                    Колдун
                   </div>
                   <div class="section-row" id="class-abilities-warlock"></div>
                   <!-- <div class="section-title-reverse-maroon">
@@ -283,15 +287,15 @@
         <!--Spellcasting section-->
         <div id="section-spellcasting" class="section-container">
              <div class="section-title">
-                  Spellcasting
+                  Заклинания
              </div>
              <div class="section-content">
                   <div class="section-title-reverse-spellcasting">
-                       Spell Information
+                       Информация о заклинаниях
                   </div>
                   <div class="section-row" id="spellcasting-spellinfo"></div>
                   <div class="section-title-reverse-spellcasting">
-                       Casting a Spell
+                       Накладывание заклинаний
                   </div>
                   <div class="section-row" id="spellcasting-casting"></div>
              </div>
@@ -300,19 +304,19 @@
         <!--Multiclassing section-->
         <div id="section-multiclassing" class="section-container">
              <div class="section-title">
-                  Multiclassing
+                  Мультиклассирование
              </div>
              <div class="section-content">
                   <div class="section-title-reverse-multiclassing">
-                       Prerequisites, Proficiencies, and More
+                      Требования мультиклассирования
                   </div>
                   <div class="section-row" id="multiclassing-classreqs"></div>
                   <div class="section-title-reverse-multiclassing">
-                       Class Features & Multiclassing
+                      Особенности классов при мультиклассировании
                   </div>
                   <div class="section-row" id="multiclassing-classfeats-reg"></div>
                   <div class="section-row section-subtitle text fontsize">
-                       Spellcasting also acts different with multiple classes...
+                      Использование классов заклинателей при мультиклассировании
                   </div>
                   <div class="section-row" id="multiclassing-classfeats-casting"></div>
              </div>
@@ -321,29 +325,29 @@
         <!-- Equipment section -->
         <div id="section-equipment" class="section-container">
              <div class="section-title">
-                 Equipment
+                 Снаряжение
              </div>
              <div class="section-content">
                <div class="section-title-reverse-sienna">
-                   Equipment Packs
+                   Наборы снаряжения
                </div>
                <div class="section-row" id="equipment-packs"></div>
                <div class="section-title-reverse-sienna">
-                   Tools
+                   Инструменты
                </div>
                <div class="section-row section-subtitle text fontsize">
-                   Normal tools
+                   Обычные инструменты
                </div>
               <div class="section-row" id="equipment-tools-norm"></div>
                <div class="section-row section-subtitle text fontsize">
-                   Artisan's tools
+                   Инструменты ремесленников
                </div>
                <div class="section-row" id="equipment-tools-artisan"></div>
                <div class="section-title-reverse-sienna">
-                   Weapons
+                   Оружие
                </div>
                <div class="section-row section-subtitle text fontsize">
-                   Weapon properties
+                   Свойства оружия
                </div>
                <div class="section-row" id="equipment-weap-prop"></div>
              </div>
@@ -352,7 +356,7 @@
         <!-- XP section -->
         <div id="section-xp" class="section-container">
              <div class="section-title">
-                 Experience
+                 Опыт
              </div>
              <div class="section-content">
                  <div class="section-row" id="xp"></div>
