Envitenment, Travel translation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Free Action section -->
         <div id="section-free-action" class="section-container">
              <div class="section-title">
-                 Свободное действие (с разрешения Мастера)
+                 Свободное действие
              </div>
              <div class="section-content">
                   <div class="section-row section-subtitle text fontsize">
@@ -103,17 +103,15 @@
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    Эффекты, которые сильно затрудняют видимость, передвижение и другие действия.
+                    Эффекты местности, которые сильно затрудняют видимость, передвижение и другие действия.
                 </div>
                 <div class="section-row" id="environment-obscurance"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    Присутствие или отсутствие света в окружении может быть разделено
-                    на три категории освещения.
+                    Наличие или отсутствие света создаёт три категории освещения: яркий свет, тусклый свет и тьму.
                 </div>
                 <div class="section-row" id="environment-light"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    Некоторые существа обладают экстраординарными чувствами,
-                    что позволяет им выживать в сложных условиях.
+                    Некоторые существа обладают экстраординарными чувствами, что позволяет им выживать в сложных условиях.
                 </div>
                 <div class="section-row" id="environment-vision"></div>
                 <div class="section-row section-subtitle text fontsize">
