--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
                     Колдун
                   </div>
                   <div class="section-row" id="class-abilities-warlock"></div>
-                  <!-- <div class="section-title-reverse-maroon">
-                    Wizard
+                  <div class="section-title-reverse-maroon">
+                    Волшебник
                   </div>
-                  <div class="section-row" id="class-abilities-wizard"></div> -->
+                  <div class="section-row" id="class-abilities-wizard"></div>
             </div>
         </div>
 
