--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <!-- Damage Types Section -->
         <div id="section-damage-types" class="section-container">
              <div class="section-title">
-                 Типы урона
+                 Урон и атака
              </div>
              <div class="section-content">
                  <div class="section-row" id="damage-types"></div>
