--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   </div>
                   <div class="section-row" id="multiclassing-classreqs"></div>
                   <div class="section-title-reverse-multiclassing">
-                      Особенности классов при мультиклассировании
+                      Особенности умений при мультиклассировании
                   </div>
                   <div class="section-row" id="multiclassing-classfeats-reg"></div>
                   <div class="section-row section-subtitle text fontsize">
