Class abilities hidden

--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
         </div>
 
         <!-- Class Abilities section -->
+        <!-- Hidden because meh -->
+        <!--
         <div id="section-classabilities" class="section-container">
              <div class="section-title">
                  Способности классов
@@ -281,7 +283,7 @@
                   <div class="section-row" id="class-abilities-wizard"></div>
             </div>
         </div>
-
+         -->
         <!--Spellcasting section-->
         <div id="section-spellcasting" class="section-container">
              <div class="section-title">
