--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   </div>
                   <div class="section-row" id="spellcasting-spellinfo"></div>
                   <div class="section-title-reverse-spellcasting">
-                       Накладывание заклинаний
+                       Наложение заклинаний
                   </div>
                   <div class="section-row" id="spellcasting-casting"></div>
              </div>
