Make modal-backdrop extended by modal.

--- a/index.html
+++ b/index.html
@@ -363,28 +363,29 @@
             </div>
         </div>
 
-    <!-- Modal -->
-    <div class="modal" id="modal" tabindex="-1">
-        <div class="modal-backdrop" id="modal-backdrop"></div>
-        <div class="modal-dialog modalsize">
-            <div class="section-container modal-container" id="modal-container">
-                <div class="section-title" id="modal-title">
-                    Modal title<span class="float-right">Action</span>
-                </div>
-                <div class="section-content">
-                    <div class="section-row section-subtitle text" id="modal-subtitle">
-                        Subtitle
-                    </div>
-                    <div class="section-row text">
-                        <div id="modal-bullets">
+        <!-- Modal -->
+        <div class="modal" id="modal" tabindex="-1">
+            <div class="modal-backdrop" id="modal-backdrop">
+                <div class="modal-dialog modalsize">
+                    <div class="section-container modal-container" id="modal-container">
+                        <div class="section-title" id="modal-title">
+                            Modal title<span class="float-right">Action</span>
                         </div>
-                    </div>
-                    <div class="section-row text" id="modal-reference">
+                        <div class="section-content">
+                            <div class="section-row section-subtitle text" id="modal-subtitle">
+                                Subtitle
+                            </div>
+                            <div class="section-row text">
+                                <div id="modal-bullets">
+                                </div>
+                            </div>
+                            <div class="section-row text" id="modal-reference">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
     <!-- Data -->
     <script type="text/javascript" src="js/data_movement.js" charset="utf-8"></script>
