Reaction limit fix

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- Reaction section -->
         <div id="section-reaction" class="section-container">
             <div class="section-title">
-                Реакция <span class="float-right">макс. 1/ход</span>
+                Реакция <span class="float-right">макс. 1/раунд</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
