Class abilities added

--- a/index.html
+++ b/index.html
@@ -228,50 +228,48 @@
     </div>
 
     <!-- Class Abilities section -->
-    <!-- Hidden because meh -->
-    <!--
-        <div id="section-classabilities" class="section-container">
-             <div class="section-title">
-                 Способности классов
-             </div>
-             <div class="section-content">
-                  <div class="section-title-reverse-maroon">
-                    Варвар
-                  </div>
-                  <div class="section-row" id="class-abilities-barbarian"></div>
-                  <div class="section-title-reverse-maroon">
-                    Бард
-                  </div>
-                  <div class="section-row" id="class-abilities-bard"></div>
-                  <div class="section-title-reverse-maroon">
-                    Жрец
-                  </div>
-                  <div class="section-row" id="class-abilities-cleric"></div>
-                  <div class="section-title-reverse-maroon">
-                    Друид
-                  </div>
-                  <div class="section-row" id="class-abilities-druid"></div>
-                  <div class="section-title-reverse-maroon">
-                    Воин
-                  </div>
-                  <div class="section-row" id="class-abilities-fighter"></div>
-                  <div class="section-title-reverse-maroon">
-                    Монах
-                  </div>
-                  <div class="section-row" id="class-abilities-monk"></div>
-                  <div class="section-title-reverse-maroon">
-                    Паладин
-                  </div>
-                  <div class="section-row" id="class-abilities-paladin"></div>
-                  <div class="section-title-reverse-maroon">
-                    Следопыт
-                  </div>
-                  <div class="section-row" id="class-abilities-ranger"></div>
-                  <div class="section-title-reverse-maroon">
-                    Плут
-                  </div>
-                  <div class="section-row" id="class-abilities-rogue"></div>
-                  <div class="section-title-reverse-maroon">
+    <div id="section-classabilities" class="section-container">
+      <div class="section-title">
+        Активные классовые умения
+      </div>
+      <div class="section-content">
+        <div class="section-title-reverse-maroon">
+          Варвар
+        </div>
+        <div class="section-row" id="class-abilities-barbarian"></div>
+        <div class="section-title-reverse-maroon">
+          Бард
+        </div>
+        <div class="section-row" id="class-abilities-bard"></div>
+        <div class="section-title-reverse-maroon">
+          Жрец
+        </div>
+        <div class="section-row" id="class-abilities-cleric"></div>
+        <div class="section-title-reverse-maroon">
+          Друид
+        </div>
+        <div class="section-row" id="class-abilities-druid"></div>
+        <div class="section-title-reverse-maroon">
+          Воин
+        </div>
+        <div class="section-row" id="class-abilities-fighter"></div>
+        <div class="section-title-reverse-maroon">
+          Монах
+        </div>
+        <div class="section-row" id="class-abilities-monk"></div>
+        <div class="section-title-reverse-maroon">
+          Паладин
+        </div>
+        <div class="section-row" id="class-abilities-paladin"></div>
+        <div class="section-title-reverse-maroon">
+          Следопыт
+        </div>
+        <div class="section-row" id="class-abilities-ranger"></div>
+        <div class="section-title-reverse-maroon">
+          Плут
+        </div>
+        <div class="section-row" id="class-abilities-rogue"></div>
+        <!--<div class="section-title-reverse-maroon">
                     Чародей
                   </div>
                   <div class="section-row" id="class-abilities-sorcerer"></div>
@@ -279,13 +277,13 @@
                     Колдун
                   </div>
                   <div class="section-row" id="class-abilities-warlock"></div>
-                  <div class="section-title-reverse-maroon">
+                <div class="section-title-reverse-maroon">
                     Волшебник
                   </div>
-                  <div class="section-row" id="class-abilities-wizard"></div>
-            </div>
-        </div>
-         -->
+                  <div class="section-row" id="class-abilities-wizard"></div>-->
+      </div>
+    </div>
+
     <!--Spellcasting section-->
     <div id="section-spellcasting" class="section-container">
       <div class="section-title">
